Self_Paced_Exercices/Securing_Workloads/Authorization_Policy_Overwrite_Default_Deny_Block_Admin/src/VirtualService.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: simple-vs
  namespace: default
spec:
  gateways:
    - istio-ingress/default
  hosts:
    - '*'
  http:
    - route:
        - destination:
            host: nginx-svc
