Self_Paced_Exercices/Securing_Workloads/Authorization_Policy_Overwrite_Default_Deny_Block_Admin/src/DefaultAuthorizationPolicy.yaml
# Deny all requests to namespace default
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: default
